--- a/pom.xml
+++ b/pom.xml
@@ -58,9 +58,20 @@
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version> <!-- adjust version as needed -->
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version> <!-- or the latest version -->
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version> <!-- or the latest version -->
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.11.5</version> <!-- or the latest version -->
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.mysql</groupId>
